// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjectDetails.vue editing works correctly 1`] = `
<div class="project-details">
  <div class="project-details__title-area">
    <h1 class="project-details__title-area__title">test</h1>
    <!---->
  </div>
  <div class="project-details__editing"><input placeholder="Enter a description for your project. Descriptions are limited to 100 characters." class="project-details__editing__input"> <span class="project-details__editing__limit">4/100</span>
    <div class="project-details__editing__cancel-button container white" style="width: 73px; height: 33px;"><span class="label">Cancel</span></div>
    <div class="project-details__editing__save-button container" style="width: 75px; height: 35px;"><span class="label">Save</span></div>
  </div>
</div>
`;

exports[`ProjectDetails.vue editing works correctly 2`] = `
<div class="project-details">
  <div class="project-details__title-area">
    <h1 class="project-details__title-area__title">test</h1> <span class="project-details__title-area__edit">
            Edit Description
        </span>
  </div>
  <p class="project-details__description">new description</p>
</div>
`;

exports[`ProjectDetails.vue renders correctly 1`] = `
<div class="project-details">
  <div class="project-details__title-area">
    <h1 class="project-details__title-area__title">test</h1> <span class="project-details__title-area__edit">
            Edit Description
        </span>
  </div>
  <p class="project-details__description">test</p>
</div>
`;
